--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -20,7 +20,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'CLIENT_ID_HERE',
+        'client_id': '8d9a20f6-577d-4bbc-8180-ba4e495bc665',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
