--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -31,6 +31,7 @@
  
 </div>
 <h2>Recommendations</h2>
+	<script>
   	var settings = {
 			  "async": true,
 			  "crossDomain": true,
@@ -70,7 +71,7 @@
 			 //document.getElementById("demo").innerHTML = response[0];
 			});
 			
-  
+	</script>
   
     <!-- Required JS files to enable this page to embed within an MPage -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
