--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -42,7 +42,7 @@
 			var settings = {
 			  "async": true,
 			  "crossDomain": true,
-			  "url": "https://18.236.89.117:9098/cds-hook-api/api/v1/cds-services/pro-recommend",
+			  "url": "http://18.236.89.117:9098/cds-hook-api/api/v1/cds-services/pro-recommend",
 			  "method": "POST",
 			  "headers": {
 				"content-type": "application/json",
