--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -11,7 +11,26 @@
     <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
   </head>
   <body>
-    
+    <div id='holder' >
+      <h2>Example-SMART-App</h2>
+
+      <h2>Patient Resource</h2>
+      <table>
+	<tr>
+          <th>First Name:</th>
+          <td id='fname'></td>
+        </tr>
+        <tr>
+          <th>Last Name:</th>
+          <td id='lname'></td>
+        </tr>
+        <tr>
+          <th>ID</th>
+          <td id='id'></td>
+        </tr>
+      </table>
+	    </div>
+			
     	<h2>Order</h2>
 <p>Select an instrument from the drop-down list:</p>
 
