--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <div id='holder' >
-      <h2>Example-SMART-App</h2>
-
-      <h2>Patient Resource</h2>
+      <h2>Patient Info</h2>
       <table>
 	<tr>
           <th>First Name:</th>
