--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -51,6 +51,10 @@
           <th>Last Name:</th>
           <td id='lname'></td>
         </tr>
+	      <tr>
+          <th>Practitioner:</th>
+          <td id='pract_id'></td>
+        </tr>
         <tr>
           <th>ID</th>
           <td id='id'></td>
@@ -148,7 +152,7 @@
 			
 			
 			listForms();
-			
+			document.getElementById("prac_id").innerHTML=practitioner_id;
 		</script>	
 
   
