--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -42,7 +42,7 @@
   <body>
 	   <!-- Application-level javascript-->
     <script src='./src/js/example-smart-app.js'></script>
-	 alert(prac_id); 
+	
 	  
     <div id='holder' >
       <h2>Patient Info</h2>
@@ -57,7 +57,7 @@
         </tr>
 	      <tr>
           <th>Practitioner:</th>
-          <td id='pract_id'>prac_id</td>
+          <td id='pract_id'></td>
         </tr>
         <tr>
           <th>ID</th>
