--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -60,7 +60,7 @@
 	      <tr>
           <th>Practitioner:</th>
           <td id='pract_id'><script type="text/javascript">
-        document.write(prac_id)
+        document.write(practitioner_id)
       </script></td>
         </tr>
         <tr>
