--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -59,9 +59,7 @@
         </tr>
 	      <tr>
           <th>Practitioner:</th>
-          <td id='pract_id'><script type="text/javascript">
-        document.write(practitioner_id)
-      </script></td>
+          <td id='pract_id'></td>
         </tr>
         <tr>
           <th>ID</th>
