--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
 
-	
+	<h2 pract_id ></h2>
 	  
     <div id='holder' >
       <h2>Patient Info</h2>
@@ -57,10 +57,7 @@
           <th>Last Name:</th>
           <td id='lname'></td>
         </tr>
-	      <tr>
-          <th>Practitioner:</th>
-          <td id='pract_id'></td>
-        </tr>
+	     
         <tr>
           <th>ID</th>
           <td id='id'></td>
