--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -44,8 +44,8 @@
   </head>
   <body>
 
-	<h2 id='pract_id' ></h2>
-	<h2 id='pract_name' ></h2>
+	<p id='pract_id' ></p></t>
+	<p id='pract_name' ></p>
 	  
     <div id='holder' >
       <h2>Patient Info</h2>
