--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -43,12 +43,12 @@
 </style>	
   </head>
   <body>
-
+	<h3>Practitioner Info</h3>
 	<p id='pract_id' ></p></t>
 	<p id='pract_name' ></p>
 	  
     <div id='holder' >
-      <h2>Patient Info</h2>
+      <h3>Patient Info</h3>
       <table>
 	<tr>
           <th>First Name:</th>
