--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -43,12 +43,12 @@
 </style>	
   </head>
   <body>
-	<h3>Practitioner Info</h3>
-	<p id='pract_id' ></p></t>
-	<p id='pract_name' ></p>
+	<h3 style="margin-left:0.5em;" >Practitioner Info</h3>
+	<p style="margin-left:0.5em;" id='pract_id' ></p></t>
+	<p style="margin-left:0.5em;" id='pract_name' ></p>
 	  
     <div id='holder' >
-      <h3>Patient Info</h3>
+      <h3 style="margin-left:0.5em;" >Patient Info</h3>
       <table>
 	<tr>
           <th>First Name:</th>
