--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -111,7 +111,9 @@ option {
 			var sformoid = e.options[e.selectedIndex].value;
 			var sformname = e.options[e.selectedIndex].text;
 			alert("FormOID : " + sformoid);
-			alert("FormName : " + sformname);	
+			alert("FormName : " + sformname);
+			alert("PractID : " + practitioner_id);
+			alert("PractName : " + pract_name;
 				
 				
 				var settings1 = {
