--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -113,7 +113,7 @@ option {
 			alert("FormOID : " + sformoid);
 			alert("FormName : " + sformname);
 			alert("PractID :  " + practitioner_id);
-			alert("PractName : " + pract_name;
+			alert("PractName : " + pract_name);
 				
 				
 				var settings1 = {
