--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -119,7 +119,7 @@ option {
 				var settings1 = {
   "async": true,
   "crossDomain": true,
-  "url": "http://18.236.89.117:9098/cds-hook-api/api/resource/post",
+  "url": "https://18.236.89.117:9098/cds-hook-api/api/resource/post",
   "method": "POST",
   "headers": {
     "Content-Type": "application/json",
