--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -54,10 +54,8 @@ option {
 </style>	
   </head>
   <body>
-	<h3  >Practitioner Info</h3>
-	<p style="margin-left:0.5em;" id='pract_id' ></p></t>
-	<p style="margin-left:0.5em;" id='pract_name' ></p>
-	  
+	  <h3  >Practitioner: <span id='pract_id' style="margin-left:5em;"></span><span id='pract_name' style="margin-left:5em;"></span></h3>
+	
     <div id='holder' >
       <h3 >Patient Info</h3>
       <table>
