--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -54,7 +54,9 @@ option {
 </style>	
   </head>
   <body>
-	  <h3  >Practitioner: <span id='pract_id' style="margin-left:5em;"></span><span id='pract_name' style="margin-left:5em;"></span></h3>
+	   <h4  >Patient: <span id='id' style="margin-left:5em;"></span><span id='lname' style="margin-left:5em;"></span>, <span id='fname'></span></h4>
+	
+	  <h4  >Practitioner: <span id='pract_id' style="margin-left:5em;"></span><span id='pract_name' style="margin-left:5em;"></span></h4>
 	
     <div id='holder' >
       <h3 >Patient Info</h3>
