--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -54,27 +54,12 @@ option {
 </style>	
   </head>
   <body>
-	   <h4  >Patient: <span id='id' style="margin-left:5em;"></span><span id='lname' style="margin-left:5em;"></span>, <span id='fname'></span></h4>
+	  <h4  >Patient: <b>ID: </b><span id='id' style="margin-left:5em;"><b>Name: </b></span><span id='lname' style="margin-left:5em;"></span>, <span id='fname'></span></h4>
 	
 	  <h4  >Practitioner: <span id='pract_id' style="margin-left:5em;"></span><span id='pract_name' style="margin-left:5em;"></span></h4>
 	
     <div id='holder' >
-      <h3 >Patient Info</h3>
-      <table>
-	<tr>
-          <th>First Name:</th>
-          <td id='fname'></td>
-        </tr>
-        <tr>
-          <th>Last Name:</th>
-          <td id='lname'></td>
-        </tr>
-	     
-        <tr>
-          <th>ID</th>
-          <td id='id'></td>
-        </tr>
-      </table>
+   
 	    </div>
 	<h2 style="margin-left:0.5em;">Order</h2>
 	</br>
