--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -54,7 +54,7 @@ option {
 </style>	
   </head>
   <body>
-	  <h4  >Patient: <b>ID: </b><span id='id' style="margin-left:5em;"></span><b>Name: </b><span id='lname' style="margin-left:5em;"></span>, <span id='fname'></span></h4>
+	  <h4  >Patient:  &#09;<b>ID: </b><span id='id' style="margin-left:5em;"></span><b>Name: </b><span id='lname' style="margin-left:5em;"></span>, <span id='fname'></span></h4>
 	
 	  <h4  >Practitioner: <span id='pract_id' style="margin-left:5em;"></span><span id='pract_name' style="margin-left:5em;"></span></h4>
 	
