--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -54,7 +54,7 @@ option {
 </style>	
   </head>
   <body>
-	  <h4  >Patient:  <b style="margin-left:7em;">ID: </b><span id='id'></span><b>Name: </b><span id='lname'></span>, <span id='fname'></span></h4>
+	  <h4  >Patient:  <b style="margin-left:7em;">ID: </b><span id='id'></span><b style="margin-left:5em;">Name: </b><span id='lname'></span>, <span id='fname'></span></h4>
 	
 	  <h4  >Practitioner: <span id='pract_id' style="margin-left:5em;"></span><span id='pract_name' style="margin-left:5em;"></span></h4>
 	
