--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -54,9 +54,9 @@ option {
 </style>	
   </head>
   <body>
-	  <h4  >Patient:  <b style="margin-left:3em;">ID: </b><span id='id'></span><b style="margin-left:1em;">Name: </b><span id='lname'></span>, <span id='fname'></span><b style="margin-left:1em;">Age: </b><span id='age'><b style="margin-left:1em;">Sex: </b><span id='gender'></span></span></h4>
+	  <h4  >Patient:  <b style="margin-left:3em;">ID: </b><span id='id'></span><b style="margin-left:2em;">Name: </b><span id='lname'></span>, <span id='fname'></span><b style="margin-left:2em;">Age: </b><span id='age'></span><b style="margin-left:2em;">Sex: </b><span id='gender'></span></h4>
 	
-	  <h4  >Practitioner: <span id='pract_id' style="margin-left:1em;"></span><span id='pract_name' style="margin-left:1em;"></span></h4>
+	  <h4  >Practitioner: <span id='pract_id' style="margin-left:2em;"></span><span id='pract_name' style="margin-left:2em;"></span></h4>
 	
     <div id='holder' >
    
