--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -97,8 +97,8 @@ option {
 			var sformname = e.options[e.selectedIndex].text;
 			alert("FormOID : " + sformoid);
 			alert("FormName : " + sformname);
-			alert("PractID :  " + practitioner_id);
-			alert("PractName : " + pract_name);
+			//alert("PractID :  " + practitioner_id);
+			//alert("PractName : " + pract_name);
 				
 				
 				var settings1 = {
