--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -15,7 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
 	  
 	  
-    <title>Example-SMART-App</title>
+    <title><span id='lname'></span>, <span id='fname'></title>
  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
