--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -69,7 +69,7 @@ header {
 
 .icon-bar {
     width: 100%;
-    height: 8%;
+    height: 10%;
     background-color: #0C5273;
     color : #FFFFFF;
     font-size: 14px;
@@ -84,6 +84,7 @@ nav {
     background: #ccc;
     height: 100%; /* Full height */
     overflow: auto;
+	max-height: calc(100vh - 9rem);
     overflow-y: auto;
    
 }
