--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -84,7 +84,7 @@ nav {
     background: #ccc;
     height: 100%; /* Full height */
     overflow: auto;
-	max-height: calc(100vh - 9rem);
+	max-height: 100%;
     overflow-y: auto;
    
 }
@@ -101,6 +101,7 @@ article {
     background-color: #f1f1f1;
     overflow: auto;
     height: 100%; /* Full height */  
+	
 }
 
 
