--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -161,12 +161,12 @@ table#t02 td,th {
   <body>
 	
  
-	<header>
+<header>
 	
 	
-    	<h4  >Patient:  <b style="margin-left:7em;">ID: </b><span id='id'></span><b style="margin-left:5em;">Name: </b><span id='lname'></span>, <span id='fname'></span><b style="margin-left:5em;">Age: </b><span id='age'></span><b style="margin-left:5em;">Sex: </b><span id='gender'></span><b style="margin-left:5em;">D.O.B: </b><span id='birthdate'></span></h4>
-	
-	<h4  >Practitioner: <span id='pract_id' style="margin-left:5em;"></span><span id='pract_name' style="margin-left:5em;"></span></h4>
+	<h4> <b><span style="margin-left:0.5em;" id='lname'></span>, <span id='fname'></span></b><b style="margin-left:5em;">Age: </b><span id='age'></span><b style="margin-left:5em;">Sex: </b><span id='gender'></span><span style="margin-left:5em;">**Allergies**</span></h4>
+	<h4>LOC:USC-GI;200;Q <b style="margin-left:5em;">D.O.B: </b><span id='birthdate'></span><span style="margin-left:5em;">MyUSC Chart:Invite Sent</span></h4>
+	<h4><span id='pract_name' style="margin-left:5em;"></span><span style="margin-left:5em;">Blood Trans Acceptable to pt?Yes</span></h4>
 	
 </header>
 	
