--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -60,7 +60,7 @@ body {
 /* Style the header */
 header {
     background: linear-gradient(to bottom, #2F99D5 0%, #1169A8 100%);
-    padding: 20px;
+ 
     text-align: left;
     font-size: 35px;
     color: white;
@@ -164,9 +164,9 @@ table#t02 td,th {
 <header>
 	
 	
-	<h4> <b><span style="margin-left:0.5em;" id='lname'></span>, <span id='fname'></span></b><b style="margin-left:5em;">Age: </b><span id='age'></span><b style="margin-left:5em;">Sex: </b><span id='gender'></span><span style="margin-left:5em;">**Allergies**</span></h4>
-	<h4>LOC:USC-GI;200;Q <b style="margin-left:5em;">D.O.B: </b><span id='birthdate'></span><span style="margin-left:5em;">MyUSC Chart:Invite Sent</span></h4>
-	<h4><span id='pract_name' style="margin-left:5em;"></span><span style="margin-left:5em;">Blood Trans Acceptable to pt?Yes</span></h4>
+	<h4> <b><span id='lname'></span>, <span id='fname'></span></b><span style="margin-left:10em;">Age: </span><span id='age'></span><span style="margin-left:10em;">Sex: </span><span id='gender'></span><span style="margin-left:10em;">**Allergies**</span></h4>
+	<h4>LOC:USC-GI;200;Q <b style="margin-left:10em;">D.O.B: </b><span id='birthdate'></span><span style="margin-left:10em;">MyUSC Chart:Invite Sent</span></h4>
+	<h4><span id='pract_name' style="margin-left:10em;"></span><span style="margin-left:10em;">Blood Trans Acceptable to pt?Yes</span></h4>
 	
 </header>
 	
