--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -79,9 +79,9 @@ header {
 	.icon-bar01 {
     width: 100%;
     height: 10%;
-    background-color: #48545D;
+    background-color: black;
     color : #FFFFFF;
-    font-size: 14px;
+    font-size: 18px;
     overflow: auto;
 }
 
@@ -187,9 +187,9 @@ table#t02 td,th {
 	<div class="row">
   <div class="column" >
     
-    	<h4 style="margin-left:0.5em;"><b><span id='lname'></span>, <span id='fname'></span></b></h4>
-	<h4 style="margin-left:0.5em;">LOC:USC-GI;200;Q </h4>
-	<h4 style="margin-left:0.5em;">Observation[Admit Dt:8/3/2018 6:07..</h4>
+    	<h4 style="margin-left:1.5em;"><b><span id='lname'></span>, <span id='fname'></span></b></h4>
+	<h4 style="margin-left:1.5em;">LOC:USC-GI;200;Q </h4>
+	<h4 style="margin-left:1.5em;">Observation[Admit Dt:8/3/2018 6:07..</h4>
   </div>
   <div class="column" >
     
