--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -79,9 +79,9 @@ header {
 	.icon-bar01 {
     width: 100%;
     height: 10%;
-    background-color: black;
+    background-color: #1F3240;
     color : #FFFFFF;
-    font-size: 18px;
+    font-size: 20px;
     overflow: auto;
 }
 
