--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -91,10 +91,11 @@ nav {
     float: left;
     width: 20%;
     background: #ccc;
+	 height: 100%; /* Full height */
 
-    overflow: auto;
-
-    overflow-y: auto;
+	   overflow: auto;
+	 max-height: 100%;
+      overflow-y: auto;
    
 }
 
@@ -105,11 +106,11 @@ nav ul {
 }
 
 article {
-    float: left;
+   float: left;
     width: 80%;
     background-color: #f1f1f1;
-    overflow: auto;
-
+	 overflow: auto;
+	  height: 100%; /* Full height */
 	
 }
 
@@ -221,7 +222,7 @@ table#t02 td,th {
 <table id="t01"class="table">
     
  <div class="icon-bar01">
-			<span  style="margin-left:1.5em;" >Menu - All</span><i style=" font-size: 7px; left: 18em; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i>
+			<span  style="margin-left:1em;" >Menu - All</span><i style=" font-size: 7px; left: 18em; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i>
 </div>
     <tbody>
 		<tr>
