--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -94,7 +94,7 @@ nav {
 	 height: 100%; /* Full height */
 
 	   overflow: auto;
-	 max-height: 100%;
+	 max-height: calc(100vh - 9rem);
       overflow-y: auto;
    
 }
@@ -111,6 +111,7 @@ article {
     background-color: #f1f1f1;
 	 overflow: auto;
 	  height: 100%; /* Full height */
+	max-height: calc(100vh - 9rem);
 	
 }
 
@@ -222,7 +223,7 @@ table#t02 td,th {
 <table id="t01"class="table">
     
  <div class="icon-bar01">
-			<span  style="margin-left:1em;" >Menu - All</span><i style=" font-size: 7px; left: 18em; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i>
+			<span  style="margin-left:0.7em;" >Menu - All</span><i style=" font-size: 7px; left: 18em; margin-bottom:0.2em;" class="glyphicon glyphicon-triangle-bottom white"></i>
 </div>
     <tbody>
 		<tr>
