--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -325,7 +325,7 @@ table#t02 td,th {
   <tr>
     <td>PRO for Fatigue</td>
     <td>Completed</td>
-    <td> Click to see results</td>
+	  <td> <a href="">Click to see results</a></td>
   </tr>
   </table>
 
