--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -340,9 +340,9 @@ table#t02 td,th {
 	</div>
 	
 		<script>
-		console.log(patient_id);
-			console.log(gender2);
-			console.log(dobstr2);
+		console.log(window.patient_id);
+			console.log(window.gender2);
+			console.log(window.dobstr2);
 			
 			
 	var recdata= "{\n   \"hook\" : \"patient-view\",\n   \"hookInstance\" : \"d1577c69-dfbe-44ad-ba6d-3e05e953b2ea\",\n   \"fhirServer\" : \"https://54.202.74.232:80/cip-fhir3/baseDstu3\",\n   \"user\" : \"Practitioner/"+practitioner_id+"\",\n   \"patient\": \""+patient_id+"\",\n   \"context\" : {\n       \"patientId\" : \""+patient_id+"\"\n   },\n   \"prefetch\" : {\n      \"patient\" : {\n         \"resourceType\" : \"Patient\",\n         \"gender\" : \""+gender2+"\",\n         \"birthDate\" : \""+dobstr2+"\",\n         \"id\" : \""+patient_id+"\",\n         \"active\" : true\n      }\n   }\n}";			
