--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -401,7 +401,12 @@ var settings = {
 			 //document.getElementById("demo").innerHTML = response[0];
 			});
 					
-			
+			function printpid() {
+				console.log(patient_id);
+				
+							console.log(gender2);
+							console.log(dobstr2);	
+			}
 		
 			function order_func() {
 			
@@ -546,6 +551,7 @@ var settings = {
 //console.log(form_oid);	
 listForms();
 formDetails(FormOID);
+			printpid();
 
 </script>		
   
