--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -3,6 +3,7 @@
   <head>
 	  
 	  	   <!-- Application-level javascript-->
+	  <script src='./src/js/global.js'></script>
     	<script src='./src/js/example-smart-app.js'></script>
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     	<meta http-equiv='X-UA-Compatible' content='IE=edge' />
