--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -317,19 +317,25 @@ table#t02 td,th {
 
 <table id="t02">
   <tr>
+	  <th>Event Date Time</th>	  
     <th>PROs Ordered</th>
     <th>Status</th>
     <th>Results</th>
+	  <th>Ref Range</th>
   </tr>
   <tr>
+	  <td> </td>
     <td>PRO for Anxiety</td>
     <td>Ordered</td>
     <td> -- </td>
+	  <td> </td>
   </tr>
   <tr>
+	  <td> </td>
     <td>PRO for Fatigue</td>
     <td>Completed</td>
-	  <td> <a href="">Click to see results</a></td>
+	  <td> <a href="./res.html">PROMIS T-SCORE 41.9</a></td>
+	  <td> 1 - 100 </td>
   </tr>
   </table>
 
