--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -334,7 +334,7 @@ table#t02 td,th {
 	  <td> </td>
     <td>PRO for Fatigue</td>
     <td>Completed</td>
-	  <td> <a href="./res.html">PROMIS T-SCORE 41.9</a></td>
+	  <td> <a href="./src/res.html">PROMIS T-SCORE 41.9</a></td>
 	  <td> 1 - 100 </td>
   </tr>
   </table>
