--- a/example-smart-app/src/res.html
+++ b/example-smart-app/src/res.html
@@ -10,7 +10,7 @@
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
-  <title>Stock Search</title>
+  <title>PROMIS Results</title>
  
   <style type="text/css">
    
