--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -324,17 +324,17 @@ table#t02 td,th {
 	  <th>Ref Range</th>
   </tr>
   <tr>
-	  <td> </td>
+	  <td> 2018-07-18 </td>
     <td>PRO for Anxiety</td>
     <td>Ordered</td>
     <td> -- </td>
 	  <td> </td>
   </tr>
   <tr>
-	  <td> </td>
+	  <td> 2018-07-06 </td>
     <td>PRO for Fatigue</td>
     <td>Completed</td>
-	  <td> <a href="./src/res.html">PROMIS T-SCORE 41.9</a></td>
+	  <td> <a target="_blank" href="./src/res.html">PROMIS T-SCORE 41.9</a></td>
 	  <td> 1 - 100 </td>
   </tr>
   </table>
