--- a/example-smart-app/src/res.html
+++ b/example-smart-app/src/res.html
@@ -45,7 +45,7 @@ Highcharts.chart('ResultDisplay', {
     yAxis: {
 	tickInterval: 2,
         title: {
-            text:'<p style=\" font-sixe: 10px\;\">t-score</p>'
+            text:'<p style=\" font-sixe: 16px\;\"><b>t-score</b></p>'
         },
 		min:0,
 		max:10
