--- a/example-smart-app/src/res.html
+++ b/example-smart-app/src/res.html
@@ -67,10 +67,10 @@ Highcharts.chart('ResultDisplay', {
 
     series: [
          {
-        name: 'Pain',
+        name: 'PROMIS Bank v1.1 - Pain Interference',
         data: [0,1, 10, 3, 0, 0, 5, 8,0]
     }, {
-        name: 'Physician Function',
+        name: 'PROMIS Bank v2.0 - Physical Function',
         data: [0,2, 5, 8, 2, 7, 0, 0, 2]
     }],
 
