--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -325,14 +325,14 @@ table#t02 td,th {
   </tr>
   <tr>
 	  <td> 2018-07-18 </td>
-    <td>PRO for Anxiety</td>
+    <td>PROMIS Bank v2.0 - Emotional Support</td>
     <td>Ordered</td>
     <td> -- </td>
 	  <td> </td>
   </tr>
   <tr>
 	  <td> 2018-07-06 </td>
-    <td>PRO for Fatigue</td>
+    <td>PROMIS Bank v2.0 - Physical Function</td>
     <td>Completed</td>
 	  <td> <a target="_blank" href="./src/res.html">PROMIS T-SCORE 41.9</a></td>
 	  <td> 1 - 100 </td>
