--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -379,7 +379,7 @@ table#t02 td,th {
 					var settings1 = {
   "async": true,
   "crossDomain": true,
-  "url": "http://54.218.226.80:8080/cds-hook-api/api/resource/post/procedure",
+  "url": "https://54.202.74.232:80/cds-hook-api/api/resource/post",
   "method": "POST",
   "headers": {
     "Content-Type": "application/json",
