--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -370,21 +370,21 @@ table#t02 td,th {
 					var date1 =new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('.')[0];
 							console.log(date1);
 							console.log(window.patient_id);
-							console.log(practitioner_id);
-							console.log(window.gender2);
-							console.log(window.dobstr2);	
+							//console.log(practitioner_id);
+							//console.log(window.gender2);
+							//console.log(window.dobstr2);	
 			var prdata = "{\n\t\"resourceType\": \"ProcedureRequest\",\n\t\"status\": \"active\",\n\t\"category\": [{\n\t\t\"coding\": [{\n\t\t\t\"system\": \"http://snomed.info/sct\",\n\t\t\t\"code\": \"386053000\",\n\t\t\t\"display\": \"Evaluation procedure (procedure)\"\n\t\t}],\n\t\t\"text\": \"Evaluation\"\n\t}],\n\t\"code\": {\n\t\t\"coding\": [{\n\t\t\t\"system\": \"http://loinc.org\",\n\t\t\t\"code\": \""+sformoid+"\",\n\t\t\t\"display\": \""+sformname+"\"\n\t\t}],\n\t\t\"text\": \""+sformname+"\"\n\t},\n\t\"occurrenceDateTime\": \""+date1+"\",\n\t\"subject\": {\n\t\t\"reference\": \"Patient/"+patient_id+"\"\n\t},\n\t\"performer\": {\n\t\t\"reference\": \"Patient/"+patient_id+"\"\n\t},\n\t\"reasonCode\": {\n\t\t\"coding\": [{\n\t\t\t\"system\": \"http://snomed.info/sct\",\n\t\t\t\"code\": \"35489007\",\n\t\t\t\"display\": \""+sformname+"\"\n\t\t}]\n\t}\n}";
 
 	
 					var settings1 = {
   "async": true,
   "crossDomain": true,
-  "url": "https://54.202.74.232:80/cds-hook-api/api/resource/post",
+  "url": "https://sapphire-demo.meliorix.com/a2d2/cds-hook-api/api/resource/post/procedure",
   "method": "POST",
   "headers": {
     "Content-Type": "application/json",
     "Cache-Control": "no-cache",
-    "Postman-Token": "8774ece4-79a0-4fa0-9b46-0bb063c18627"
+    "Postman-Token": "15f84b11-8896-8e3f-e7be-6e11cdd23f43"
   },
   "processData": false,
   "data": prdata
