--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -163,13 +163,13 @@ table#t02 td,th {
 	
 #header1
 		{
-		background-color: #0C5273; 
+		background-color: #d0d3d8; 
 		width: 100%;
-        height: 70px;
-		color:white ;
-		font-size: 28px;
+        	height: 70px;
+		
+		font-size: 24px;
 		padding :20px;
-		text-align: center;
+		text-align: left;
 		text-decoration: none;
 		
 		}
@@ -218,7 +218,7 @@ table#t02 td,th {
     
         <h4><span>Age: </span><span id='age'></h4>
 	<h4><b>D.O.B: </b><span id='birthdate'></span></h4>
-	<h4><span id='pract_name'></span</h4>
+	
 
   </div>
   <div class="column" >
