--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -218,7 +218,7 @@ table#t02 td,th {
     
         <h4><span>Age: </span><span id='age'></h4>
 	<h4><b>D.O.B: </b><span id='birthdate'></span></h4>
-	
+	<h4><span id='pract_name'></span></h4>
 
   </div>
   <div class="column" >
@@ -369,7 +369,7 @@ table#t02 td,th {
 </section>
 
 <section hidden id="patient-view">
-	<nav> </nav>
+	
 
 	<div id="header1">
 	<p> Questionnaire for PROMIS Bank v2.0 - Physical Function</p>
