--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -206,7 +206,7 @@ table#t02 td,th {
   <body>
 	
  
-<header>
+<header hidden id = "doctor-view-head">
 	<div class="row">
   <div class="column" >
     
