--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -163,7 +163,7 @@ table#t02 td,th {
 	
 #header1
 		{
-		background-color: #d0d3d8; 
+		background-color: #0C5273; 
 		width: 100%;
         	height: 70px;
 		
