--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -166,7 +166,7 @@ table#t02 td,th {
 		background-color: #0C5273; 
 		width: 100%;
         	height: 70px;
-		
+		color:white;
 		font-size: 24px;
 		padding :20px;
 		text-align: left;
