--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -163,12 +163,12 @@ table#t02 td,th {
 	
 #header1
 		{
-		background-color: #0C5273; 
+		
 		width: 100%;
-        	height: 70px;
-		color:white;
-		font-size: 24px;
-		padding :20px;
+        height: 30px;
+		
+		font-size: 22px;
+		
 		text-align: left;
 		text-decoration: none;
 		
@@ -179,9 +179,15 @@ table#t02 td,th {
         height: 400px;
 		font-size: 20px;
 		padding :40px;
+		margin-left:15em;
 		}
 		
-		
+		#pat-header{
+		width: 100%;
+        height: 70px;
+		background: linear-gradient(to bottom, #2F99D5 0%, #1169A8 100%);
+		color:white;
+		}
 		
 		.btn-submit {
 				background-color: #0079BE; 
@@ -196,10 +202,10 @@ table#t02 td,th {
 				cursor: pointer;
 				width: 500px;
 				height: 40px;
-				}	
-	
-	
-	
+				}
+		
+			.button6 {border-radius: 4px;width: 200px; }
+
 	
 </style>	
   </head>
@@ -370,12 +376,27 @@ table#t02 td,th {
 
 <section hidden id="patient-view">
 	
+	<header id="pat-header">
+	</br>
+	<P style="margin-left:1em; text-align: left; font-size: 28px;">PROs available for Wilma Smart</P></br></br>
+	</header>
+	
+	<div id ="PROname">
+	</br>
+	<p style="margin-left:1em; text-align: left; font-size: 18px;" > PROMIS Bank v2.0 - Physical Function <button class="button button6" style="margin-left:1em;" type="button" onclick="displayQ(); this.disabled=true; ">Start Assessment</button></P>
+   
+	</br>
+	
 
-	<div id="header1">
-	<p> Questionnaire for PROMIS Bank v2.0 - Physical Function</p>
+	<div hidden id="header1">
+	<p style="margin-left:15em;"><b>Questionnaire for PROMIS Bank v2.0 - Physical Function</b></p>
 	</div>
-	<div id="Content">
+	
+	
+
+	<div hidden id="Content">
 	</div>
+	
 	
 </section>
 	<script>
@@ -578,7 +599,12 @@ prorecommend();
 		
 		
 // Flow for the patient app
-		
+		function displayQ(){
+	
+  $('#header1').show();
+ $('#Content').show();
+ 	      
+}
 		
 		var global_asmtOID;
 		var datefin;
