--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -184,7 +184,7 @@ table#t02 td,th {
 		
 		#pat-header{
 		width: 100%;
-        height: 80px;
+        height: 60px;
 		background: linear-gradient(to bottom, #2F99D5 0%, #1169A8 100%);
 		color:white;
 		}
@@ -378,11 +378,12 @@ table#t02 td,th {
 	
 	<header id="pat-header">
 		</br>
-	<P style="margin-left:1em; text-align: left; font-size: 28px;">PROs available for Wilma Smart</P></br></br>
+	<P style="margin-left:1em; text-align: left; font-size: 28px;">PROs available for Wilma Smart</P></br>
 	</header>
 	
 	<div id ="PROname">
 	</br>
+</br>
 	<p style="margin-left:1em; text-align: left; font-size: 18px;" > PROMIS Bank v2.0 - Physical Function <button class="button button6" style="margin-left:1em;" type="button" onclick="displayQ(); this.disabled=true; ">Start Assessment</button></P>
    
 	</br>
