--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -713,6 +713,7 @@ var assessmentOID = startAssessment(FormOID);
 		console.log(data.Theta);
 		   var T_Score = data.Theta * 10 + 50.0;
 		   console.log("T-Score : " + T_Score);
+			alert("T-Score : " + T_Score);
 		   //console.log("results");
         },
 	
