--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -596,7 +596,7 @@ var settings = {
 //console.log(form_oid);	
 listForms();
 formDetails(FormOID);
-//prorecommend();
+prorecommend();
 		
 		
 // Flow for the patient app
