--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -541,7 +541,7 @@ table#t02 td,th {
 var settings = {
   "async": true,
   "crossDomain": true,
-  "url": "https://54.202.74.232:80/cds-hook-api/api/v1/cds-services/pro-recommend",
+  "url": "https://sapphire-demo.meliorix.com/a2d2/cds-hook-api/api/v1/cds-services/pro-recommend",
   "method": "POST",
   "headers": {
     "Content-Type": "application/json",
