--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -11,6 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
+	  
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
@@ -376,12 +377,14 @@ table#t02 td,th {
 
 <section hidden id="patient-view">
 	
-	<header id="pat-header">
+	<header id="pat-header" class="jumbotron text-center">
 		</br>
 	<P style="margin-left:1em; text-align: left; font-size: 28px;">PROs available for Wilma Smart</P></br>
 	</header>
-	
-	<div id ="PROname">
+
+
+
+	<div id ="PROname" class="container-fluid">
 	</br>
 </br>
 	<p style="margin-left:1em; text-align: left; font-size: 18px;" > PROMIS Bank v2.0 - Physical Function <button class="button button6" style="margin-left:1em;" type="button" onclick="displayQ(); this.disabled=true; ">Start Assessment</button></P>
@@ -389,13 +392,13 @@ table#t02 td,th {
 	</br>
 	
 
-	<div hidden id="header1">
+	<div hidden id="header1" class="container-fluid">
 	<p style="margin-left:5em;"><b>Questionnaire for PROMIS Bank v2.0 - Physical Function</b></p>
 	</div>
 	
 	
 
-	<div hidden id="Content">
+	<div hidden id="Content" class="container-fluid">
 	</div>
 	
 	
