--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -377,14 +377,14 @@ table#t02 td,th {
 
 <section hidden id="patient-view">
 	
-	<header id="pat-header" class="jumbotron text-center">
+	<header id="pat-header">
 		</br>
 	<P style="margin-left:1em; text-align: left; font-size: 28px;">PROs available for Wilma Smart</P></br>
 	</header>
 
 
 
-	<div id ="PROname" class="container-fluid">
+	<div id ="PROname" >
 	</br>
 </br>
 	<p style="margin-left:1em; text-align: left; font-size: 18px;" > PROMIS Bank v2.0 - Physical Function <button class="button button6" style="margin-left:1em;" type="button" onclick="displayQ(); this.disabled=true; ">Start Assessment</button></P>
@@ -392,13 +392,13 @@ table#t02 td,th {
 	</br>
 	
 
-	<div hidden id="header1" class="container-fluid">
+	<div hidden id="header1" >
 	<p style="margin-left:5em;"><b>Questionnaire for PROMIS Bank v2.0 - Physical Function</b></p>
 	</div>
 	
 	
 
-	<div hidden id="Content" class="container-fluid">
+	<div hidden id="Content" >
 	</div>
 	
 	
